--- a/style.css
+++ b/style.css
@@ -53,3 +53,38 @@ h2 {
   width: 300px;
   background: #fff;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #ccffcc;
+}
+
+.container {
+  color: #333;
+  text-align: center;
+}
+
+h1 {
+  font-weight: normal;
+  color: #fff;
+}
+
+li {
+  display: inline-block;
+  font-size: 0.5em;
+  list-style-type: none;
+  padding: 1em;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+li span {
+  display: block;
+  font-size: 2.5rem;
+  color: #fff;
+}
